--- a/en/index.html
+++ b/en/index.html
@@ -825,6 +825,53 @@
                         </a>
                     </div>
 
+                    <!-- Case Study Card Holbox -->
+                    <div class="snap-center shrink-0 w-full md:w-[calc(50%-1rem)]">
+                        <a href="pages/case-study-holbox.html"
+                            class="group relative block h-[500px] rounded-3xl overflow-hidden border border-white/10 hover:border-accent/50 transition-all duration-500 hover:shadow-2xl hover:shadow-accent/10">
+                            <div class="absolute inset-0 bg-gradient-to-t from-black via-black/50 to-transparent z-10">
+                            </div>
+                            <!-- Placeholder Image -->
+                            <img src="https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?auto=format&fit=crop&q=80&w=1000"
+                                alt="Holbox Order Automation"
+                                class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 grayscale group-hover:grayscale-0">
+
+                            <div
+                                class="absolute bottom-0 left-0 right-0 p-8 z-20 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
+                                <div class="flex items-center gap-3 mb-4">
+                                    <span
+                                        class="px-3 py-1 rounded-full bg-accent/60 text-white text-xs font-bold border border-accent/20">Holbox</span>
+                                    <span class="text-white text-xs uppercase tracking-wider">Administration</span>
+                                </div>
+                                <h3
+                                    class="text-white md:text-3xl font-bold mb-2 group-hover:text-accent transition-colors">
+                                    Reporting Automation</h3>
+                                <p class="text-gray-300 mb-6 line-clamp-2 group-hover:text-gray-300">System saving 40h
+                                    monthly by eliminating manual order transcription from emails.</p>
+
+                                <div class="grid grid-cols-3 gap-4 mb-6 border-t border-white/10 pt-4">
+                                    <div>
+                                        <div class="text-xl font-bold text-white">40h</div>
+                                        <div class="text-xs text-gray-500">Monthly</div>
+                                    </div>
+                                    <div>
+                                        <div class="text-xl font-bold text-white">100%</div>
+                                        <div class="text-xs text-gray-500">Accuracy</div>
+                                    </div>
+                                    <div>
+                                        <div class="text-xl font-bold text-white">Auto</div>
+                                        <div class="text-xs text-gray-500">Reports</div>
+                                    </div>
+                                </div>
+
+                                <div
+                                    class="flex items-center text-primary-text font-medium group-hover:gap-2 transition-all">
+                                    View case study <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
                     <!-- Case Study Card 3: Pup's Choice -->
                     <div class="snap-center shrink-0 w-full md:w-[calc(50%-1rem)]">
                         <a href="pages/case-study-pups-choice.html"
