--- a/pages/case-study-pups-choice.html
+++ b/pages/case-study-pups-choice.html
@@ -233,7 +233,7 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="grid md:grid-cols-2 gap-8">
                 <!-- Previous -->
-                <a href="case-study-art-tim.html"
+                <a href="case-study-holbox.html"
                     class="group block p-8 rounded-3xl bg-white border border-gray-100 hover:border-primary/50 hover:shadow-lg hover:shadow-primary/5 transition-all text-left">
                     <div
                         class="text-sm text-gray-500 group-hover:text-primary mb-2 flex items-center gap-2 transition-colors">
@@ -243,7 +243,7 @@
                     </div>
                     <h3
                         class="text-2xl font-display font-bold text-gray-900 group-hover:text-primary transition-colors">
-                        Art-Tim</h3>
+                        Holbox</h3>
                 </a>
 
                 <!-- Next -->
